<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <!--分割线-->
    <View style="@style/segment_line" />
    <!--底部-->
    <LinearLayout style="@style/inc_bottom_container">
        <!--当前任务-->
        <FrameLayout
            style="@style/inc_bottom_item_block">
            <LinearLayout
                android:id="@+id/index_tab_curtask"
                style="@style/inc_bottom_item_ll">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:id="@+id/index_tab_curtask_fl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:id="@+id/index_tab_curtask_iv_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_curtask_normal" />
                        <ImageView
                            android:id="@+id/index_tab_curtask_iv_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_curtask_select"
                            android:visibility="gone" />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/index_tab_curtask_tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/index_tab_curtask_fl"
                        android:background="@drawable/bg_shape_corner_bottom_number"
                        android:visibility="gone"
                        android:textColor="@color/bottom_number_tv_text"
                        />
                </RelativeLayout>
                <TextView
                    android:id="@+id/index_tab_curtask_tv_tag"
                    style="@style/inc_bottom_item_tv"
                    android:text="@string/app_index_tab_curtask" />
            </LinearLayout>
        </FrameLayout>
        <!--历史任务-->
        <FrameLayout
            style="@style/inc_bottom_item_block">
            <LinearLayout
                android:id="@+id/index_tab_histask"
                style="@style/inc_bottom_item_ll"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:id="@+id/index_tab_histask_fl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:id="@+id/index_tab_histask_iv_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_histask_normal" />
                        <ImageView
                            android:id="@+id/index_tab_histask_iv_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_histask_select"
                            android:visibility="gone" />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/index_tab_histask_tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/index_tab_histask_fl"
                        android:background="@drawable/bg_shape_corner_bottom_number"
                        android:visibility="gone"
                        android:textColor="@color/bottom_number_tv_text" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/index_tab_histask_tv_tag"
                    style="@style/inc_bottom_item_tv"
                    android:text="@string/app_index_tab_histask" />
            </LinearLayout>
        </FrameLayout>
        <!--实时预警-->
        <FrameLayout
            style="@style/inc_bottom_item_block">
            <LinearLayout
                android:id="@+id/index_tab_realwarn"
                style="@style/inc_bottom_item_ll">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:id="@+id/index_tab_realwarn_fl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:id="@+id/index_tab_realwarn_iv_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_realwarn_normal"/>
                        <ImageView
                            android:id="@+id/index_tab_realwarn_iv_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_realwarn_select"
                            android:visibility="gone" />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/index_tab_realwarn_tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/index_tab_realwarn_fl"
                        android:background="@drawable/bg_shape_corner_bottom_number"
                        android:visibility="gone"
                        android:textColor="@color/bottom_number_tv_text" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/index_tab_realwarn_tv_tag"
                    style="@style/inc_bottom_item_tv"
                    android:text="@string/app_index_tab_realwarn" />
            </LinearLayout>
        </FrameLayout>
        <!--运费-->
        <FrameLayout
            style="@style/inc_bottom_item_block">
            <LinearLayout
                android:id="@+id/index_tab_freightbill"
                style="@style/inc_bottom_item_ll">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:id="@+id/index_tab_freightbill_fl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        >
                        <ImageView
                            android:id="@+id/index_tab_freightbill_iv_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_freightbill_normal" />
                        <ImageView
                            android:id="@+id/index_tab_freightbill_iv_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_freightbill_select"
                            android:visibility="gone"
                            />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/index_tab_freightbill_tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/index_tab_freightbill_fl"
                        android:background="@drawable/bg_shape_corner_bottom_number"
                        android:visibility="gone"
                        android:textColor="@color/bottom_number_tv_text" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/index_tab_freightbill_tv_tag"
                    style="@style/inc_bottom_item_tv"
                    android:text="@string/app_index_tab_freightbill" />
            </LinearLayout>
        </FrameLayout>
        <!--轨迹-->
        <FrameLayout
            style="@style/inc_bottom_item_block"
            android:visibility="gone">
            <LinearLayout
                android:id="@+id/index_tab_pathtrail"
                style="@style/inc_bottom_item_ll"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <FrameLayout
                        android:id="@+id/index_tab_pathtrail_fl"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true">
                        <ImageView
                            android:id="@+id/index_tab_pathtrail_iv_normal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_pathtrail_normal"
                            />
                        <ImageView
                            android:id="@+id/index_tab_pathtrail_iv_select"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_bottom_pathtrail_select"
                            android:visibility="gone"
                             />
                    </FrameLayout>
                    <TextView
                        android:id="@+id/index_tab_pathtrail_tv_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toEndOf="@+id/index_tab_pathtrail_fl"
                        android:background="@drawable/bg_shape_corner_bottom_number"
                        android:visibility="gone"
                        android:textColor="@color/bottom_number_tv_text" />
                </RelativeLayout>
                <TextView
                    android:id="@+id/index_tab_pathtrail_tv_tag"
                    android:text="@string/app_index_tab_pathtrail"
                    style="@style/inc_bottom_item_tv" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
